<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:minHeight="48dp"
        android:onClick="sendToLogin"
        android:shadowColor="#676767"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="Login Here"
        android:textColor="#4A3BFE"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Already have an account?"
        android:textColor="#000000"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_medium"
        android:text="OR"
        android:textColor="#853bfe"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="________"
        android:textColor="#853bfe"
        android:textSize="34dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="________"
        android:textColor="#853bfe"
        android:textSize="34dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:shadowColor="#716F6F"
        android:shadowDx="-5"
        android:shadowDy="8"
        android:shadowRadius="12"
        android:text="REGISTER"
        android:textColor="#000000"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="_______________"
        android:textColor="#853bfe"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/register_box_background"
        android:drawableLeft="@drawable/dark_email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center|start"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#000000"
        android:textColorHint="?android:attr/textColorHint"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:background="@drawable/register_box_background"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center|start"
        android:hint="@string/Fullname"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#000000"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/register_box_background"
        android:drawableLeft="@drawable/baseline_phone_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center|start"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/register_box_background"
        android:drawableLeft="@drawable/dark_lock"
        android:drawableRight="@drawable/baseline_visibility_off_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center|start"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:tag="invisible"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/register_box_background"
        android:drawableLeft="@drawable/dark_lock"
        android:drawableRight="@drawable/baseline_visibility_off_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center|start"
        android:hint="@string/CPassword"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:tag="invisible"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button3"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/poppins_medium"
        android:onClick="registerFunction"
        android:paddingStart="-2dp"
        android:paddingLeft="-2dp"
        android:text="@string/Register"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>